# intelligent-consulting-bv-stratix

./: AURIS Implementation Guide March 2026.docx  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  stratix_mappers.py  stratix_registry.py  stratix_sdk.ts  stratix_validator.py
.github/workflows/: publish.yml
stratix/: cli.py
tests/: test_mappers.py  test_validator.py
