[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stratix-sdk"
version = "1.0.0"
description = "STRATIX schema validation, vendor mappers, and registry client for the STRATIX security telemetry framework"
readme = "README.md"
licence = {text = "Apache-2.0"}
authors = [
    {name = "Suzanne Natalie Button", email = "director@intelligentconsulting.eu"},
]
maintainers = [
    {name = "Intelligent Consulting BV", email = "director@intelligentconsulting.eu"},
]
keywords = [
    "stratix", "security", "telemetry", "schema", "OCSF",
    "SIEM", "SOC", "cybersecurity", "NIS2", "DORA", "GDPR",
    "OT", "ICS", "SCADA", "sovereign-cloud", "EU",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Licence :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0"]
http = ["requests>=2.31.0"]
all = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0", "requests>=2.31.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "build>=1.1.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage       = "https://intelligentconsulting.eu/stratix"
Documentation  = "https://docs.stratix.io"
Repository     = "https://github.com/intelligent-consulting-bv/stratix"
Registry       = "https://registry.stratix.io"
"Bug Tracker"  = "https://github.com/intelligent-consulting-bv/stratix/issues"

[project.scripts]
stratix-validate = "stratix.cli:validate_cli"
stratix-map      = "stratix.cli:map_cli"
stratix-registry = "stratix.cli:registry_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["stratix*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --cov=stratix --cov-report=term-missing"
